load("//bazel:tachyon_cc.bzl", "tachyon_cc_binary", "tachyon_cuda_library")

tachyon_cuda_library(
    name = "cuda_example",
    srcs = ["cuda_example.cu.cc"],
    deps = [
        "@local_config_cuda//cuda:cudart",
    ],
)

tachyon_cc_binary(
    name = "cuda_example_main",
    deps = [":cuda_example"],
)

tachyon_cc_binary(
    name = "version",
    srcs = ["version.cc"],
    deps = [
        "//tachyon:version",
    ],
)
