load("@local_config_cuda//cuda:build_defs.bzl", "if_cuda")
load(
    "//bazel:tachyon_cc.bzl",
    "tachyon_cc_binary",
    "tachyon_cuda_binary",
    "tachyon_cuda_library",
)

tachyon_cuda_library(
    name = "cuda_example",
    srcs = ["cuda_example.cu.cc"],
    deps = if_cuda(["@local_config_cuda//cuda:cuda_headers"]),
)

tachyon_cuda_binary(
    name = "cuda_example_main",
    deps = [":cuda_example"],
)

tachyon_cc_binary(
    name = "version",
    srcs = ["version.cc"],
    deps = [
        "//tachyon:version",
    ],
)
