load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("//bazel:tachyon_rust.bzl", "tachyon_rust_library")

package(default_visibility = ["//visibility:public"])

tachyon_rust_library(
    name = "tachyon_rs",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    deps = all_crate_deps(normal = True),
)
