load("@kroma_network_tachyon//bazel:tachyon_cc.bzl", "tachyon_cc_binary")

tachyon_cc_binary(
    name = "prover_main",
    srcs = ["prover_main.cc"],
    deps = [
        "//circomlib/circuit:quadratic_arithmetic_program",
        "//circomlib/json",
        "//circomlib/json:groth16_proof",
        "//circomlib/json:prime_field",
        "//circomlib/wtns",
        "//circomlib/zkey",
        "@com_google_absl//absl/strings",
        "@kroma_network_tachyon//tachyon/base:profiler",
        "@kroma_network_tachyon//tachyon/base/console",
        "@kroma_network_tachyon//tachyon/base/files:file_path_flag",
        "@kroma_network_tachyon//tachyon/base/flag:flag_parser",
        "@kroma_network_tachyon//tachyon/math/elliptic_curves/bls12/bls12_381",
        "@kroma_network_tachyon//tachyon/math/elliptic_curves/bn/bn254",
        "@kroma_network_tachyon//tachyon/math/polynomials/univariate:univariate_evaluation_domain_factory",
        "@kroma_network_tachyon//tachyon/math/polynomials/univariate/icicle:icicle_ntt_holder",
        "@kroma_network_tachyon//tachyon/zk/r1cs/groth16:prove",
        "@kroma_network_tachyon//tachyon/zk/r1cs/groth16:verify",
    ],
)
