load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@cxx.rs//tools/bazel:rust_cxx_bridge.bzl", "rust_cxx_bridge")
load("@local_config_cuda//cuda:build_defs.bzl", "if_cuda")
load("//bazel:tachyon.bzl", "if_gpu_is_configured", "if_has_openmp")
load("//bazel:tachyon_cc.bzl", "tachyon_cc_library")
load("//bazel:tachyon_rust.bzl", "tachyon_rust_library", "tachyon_rust_test")

FEATURES = if_gpu_is_configured(["gpu"])

tachyon_rust_library(
    name = "halo2",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    crate_features = FEATURES,
    proc_macro_deps = all_crate_deps(proc_macro = True),
    deps = all_crate_deps(normal = True) + [
        ":bn254_blake2b_writer",
        ":bn254_cxx_bridge",
        ":bn254_evals",
        ":bn254_msm",
        ":bn254_msm_gpu",
        ":bn254_poly",
        ":bn254_proving_key",
        ":bn254_rational_evals",
        ":bn254_shplonk_prover",
        ":xor_shift_rng",
        ":xor_shift_rng_cxx_bridge",
        "//tachyon/rs:tachyon_rs",
    ],
)

# NOTE(chokobole): Maybe we can add this attribute to `halo2_test`.
# But this approach doesn't work when compiling with nvcc.
# rustc_flags = if_has_openmp(["-lgomp"]),
cc_library(
    name = "openmp",
    linkopts = if_has_openmp(["-fopenmp"]),
)

tachyon_rust_test(
    name = "halo2_test",
    size = "small",
    aliases = aliases(),
    crate = ":halo2",
    crate_features = FEATURES,
    proc_macro_deps = all_crate_deps(proc_macro_dev = True),
    deps = all_crate_deps(normal_dev = True) + [
        ":openmp",
        "@local_config_gmp//:gmp",
    ] + if_cuda([
        "@local_config_cuda//cuda:cudart_static",
    ]),
)

rust_cxx_bridge(
    name = "bn254_cxx_bridge",
    src = "src/bn254.rs",
    args = if_gpu_is_configured([
        '--cfg=feature="gpu"',
    ]),
    deps = [":bn254_api_hdrs"],
)

rust_cxx_bridge(
    name = "xor_shift_rng_cxx_bridge",
    src = "src/xor_shift_rng.rs",
    deps = [":xor_shift_rng_api_hdrs"],
)

tachyon_cc_library(
    name = "bn254_api_hdrs",
    hdrs = [
        "include/bn254_blake2b_writer.h",
        "include/bn254_evals.h",
        "include/bn254_msm.h",
        "include/bn254_msm_gpu.h",
        "include/bn254_poly.h",
        "include/bn254_proving_key.h",
        "include/bn254_rational_evals.h",
        "include/bn254_shplonk_prover.h",
    ],
    deps = [
        "//tachyon/c/math/polynomials/univariate:bn254_univariate_dense_polynomial",
        "//tachyon/c/math/polynomials/univariate:bn254_univariate_evaluations",
        "//tachyon/c/math/polynomials/univariate:bn254_univariate_rational_evaluations",
        "//tachyon/c/zk/plonk/halo2:bn254_shplonk_prover",
        "//tachyon/c/zk/plonk/halo2:bn254_transcript",
        "//tachyon/c/zk/plonk/keys:bn254_plonk_proving_key",
        "@cxx.rs//:core",
    ],
)

tachyon_cc_library(
    name = "bn254_blake2b_writer",
    srcs = ["src/bn254_blake2b_writer.cc"],
    deps = [
        ":bn254_api_hdrs",
        ":bn254_cxx_bridge/include",
        "//tachyon/base:logging",
    ],
)

tachyon_cc_library(
    name = "bn254_evals",
    srcs = ["src/bn254_evals.cc"],
    deps = [
        ":bn254_api_hdrs",
        ":bn254_cxx_bridge/include",
    ],
)

tachyon_cc_library(
    name = "bn254_msm",
    srcs = ["src/bn254_msm.cc"],
    deps = [
        ":bn254_api_hdrs",
        ":bn254_cxx_bridge/include",
        "//tachyon/c/math/elliptic_curves/bn/bn254:msm",
    ],
)

tachyon_cc_library(
    name = "bn254_msm_gpu",
    srcs = if_gpu_is_configured(["src/bn254_msm_gpu.cc"]),
    deps = [
        ":bn254_api_hdrs",
        ":bn254_cxx_bridge/include",
        "//tachyon/c/math/elliptic_curves/bn/bn254:msm_gpu",
    ],
)

tachyon_cc_library(
    name = "bn254_poly",
    srcs = ["src/bn254_poly.cc"],
    deps = [
        ":bn254_api_hdrs",
        ":bn254_cxx_bridge/include",
    ],
)

tachyon_cc_library(
    name = "bn254_rational_evals",
    srcs = ["src/bn254_rational_evals.cc"],
    deps = [
        ":bn254_api_hdrs",
        ":bn254_cxx_bridge/include",
    ],
)

tachyon_cc_library(
    name = "bn254_shplonk_prover",
    srcs = ["src/bn254_shplonk_prover.cc"],
    deps = [
        ":bn254_api_hdrs",
        ":bn254_cxx_bridge/include",
        ":bn254_evals",
        ":bn254_poly",
        ":bn254_rational_evals",
        "//tachyon/base/buffer",
        "//tachyon/rs/base:rust_vec",
    ],
)

tachyon_cc_library(
    name = "bn254_proving_key",
    srcs = ["src/bn254_proving_key.cc"],
    deps = [
        ":bn254_api_hdrs",
        ":bn254_cxx_bridge/include",
    ],
)

tachyon_cc_library(
    name = "xor_shift_rng_api_hdrs",
    hdrs = ["include/xor_shift_rng.h"],
    deps = [
        "//tachyon/c/crypto/random:rng",
        "@cxx.rs//:core",
    ],
)

tachyon_cc_library(
    name = "xor_shift_rng",
    srcs = ["src/xor_shift_rng.cc"],
    deps = [
        ":xor_shift_rng_api_hdrs",
        ":xor_shift_rng_cxx_bridge/include",
        "//tachyon/base:logging",
    ],
)
