[package]
name = "tachyon_halo2"
version = "0.0.1"
authors = ["The Tachyon Authors <tachyon-discuss@kroma.network>"]
edition = "2021"
rust-version = "1.56.1"
description = """
Halo2 unittest based on tachyon
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/kroma-network/tachyon"
readme = "README.md"
categories = ["cryptography"]
keywords = ["tachyon", "halo", "proofs", "zkp", "zkSNARKs"]
publish = false

[dependencies]
cxx = "1.0"
digest = "0.10.3"
ff = "0.12"
num-bigint = { version = "0.4", features = ["rand"] }
halo2_proofs = { git = "https://github.com/kroma-network/halo2.git", rev = "be2e64f" }
halo2curves = { git = "https://github.com/kroma-network/halo2curves.git", rev = "c0ac193" }
sha2 = "0.10.2"
tachyon_rs = { path = "../../tachyon/rs" }
rand_core = { version = "0.6", default-features = false, features = [
    "getrandom",
] }

[dev-dependencies]
rand_xorshift = "0.3"

[features]
default = []
gpu = []
