[package]
name = "tachyon_halo2"
version = "0.0.1"
authors = ["The Tachyon Authors <tachyon-discuss@kroma.network>"]
edition = "2021"
rust-version = "1.56.1"
description = """
Halo2 unittest based on tachyon
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/kroma-network/tachyon"
readme = "README.md"
categories = ["cryptography"]
keywords = ["tachyon", "halo", "proofs", "zkp", "zkSNARKs"]
publish = false

[dependencies]
cxx = "1.0"
digest = "0.10.3"
ff = "0.13"
log = "0.4.17"
num-bigint = { version = "0.4", features = ["rand"] }
halo2_proofs = { git = "https://github.com/kroma-network/halo2.git", branch = "scroll-halo2-v1.1-with-tachyon-without-cxx" }
halo2curves = { version = "0.1.0", features = ["derive_serde"] }
sha2 = "0.10.2"
tachyon_rs = { path = "../../tachyon/rs" }
rand_core = { version = "0.6", default-features = false, features = [
    "getrandom",
] }

[dev-dependencies]
rand_chacha = "0.3.1"
rand_xorshift = "0.3"

[features]
default = []
gpu = []
